<resources>
    <string name="app_name">Váner</string>
    <string name="action_logout">Cerrar sesión</string>

    <string name="menu_profile">Perfil</string>
    <string name="menu_users">Usuarios</string>
    <string name="menu_jobs">Trabajos</string>
    <string name="menu_applications">Postulaciones</string>
    <string name="menu_settings">Ajustes</string>

    <string name="delete_account">Eliminar cuenta</string>
    <string name="create_job">Crear trabajo</string>
    <string name="edit_job">Editar trabajo</string>
    <string name="detail_application">Detalle postulación</string>
    <string name="create_application">Enviar postulación</string>
    <string-array name="job_mode_array">
        <item>Full-time</item>
        <item>Part-time</item>
        <item>Por Horas</item>
    </string-array>
    <string-array name="roles_array">
        <item>Empresa</item>
        <item>Trabajador</item>
    </string-array>
</resources>