<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/users"
            android:title="@string/menu_users"
            android:visible="false" />
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/case_icon"
            android:title="@string/menu_jobs" />
        <item
            android:id="@+id/nav_applications"
            android:icon="@drawable/form"
            android:title="@string/menu_applications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
    </group>
</menu>