<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.aplication.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_delete_account"
            app:destination="@id/delete_account" />
    </fragment>

    <fragment
        android:id="@+id/delete_account"
        android:name="com.example.aplication.ui.profile.DeleteAccount"
        android:label="@string/delete_account"
        tools:layout="@layout/delete_account" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.aplication.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_jobs"
        android:name="com.example.aplication.ui.jobs.JobsFragment"
        android:label="@string/menu_jobs"
        tools:layout="@layout/fragment_jobs" >
        <action
            android:id="@+id/action_nav_jobs_to_create_job"
            app:destination="@id/create_job" />
        <action
            android:id="@+id/action_nav_jobs_to_edit_job"
            app:destination="@id/edit_job"
            app:argType="string"
            android:name="jobId" />
        <action
            android:id="@+id/action_nav_jobs_to_create_application"
            app:destination="@id/create_application"
            app:argType="string"
            android:name="jobId" />
    </fragment>

    <fragment
        android:id="@+id/create_job"
        android:name="com.example.aplication.ui.jobs.CreateJob"
        android:label="@string/create_job"
        tools:layout="@layout/create_job" />

    <fragment
        android:id="@+id/edit_job"
        android:name="com.example.aplication.ui.jobs.EditJob"
        android:label="@string/edit_job"
        tools:layout="@layout/edit_job">
        <argument
            android:name="jobId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/create_application"
        android:name="com.example.aplication.ui.jobs.CreateApplication"
        android:label="@string/create_application"
        tools:layout="@layout/create_application" >
        <argument
            android:name="jobId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_applications"
        android:name="com.example.aplication.ui.applications.ApplicationsFragment"
        android:label="@string/menu_applications"
        tools:layout="@layout/fragment_applications" >
        <action
            android:id="@+id/action_nav_applications_to_detail_application"
            app:destination="@id/detail_application"
            app:argType="string"
            android:name="applicationId" />
    </fragment>

    <fragment
        android:id="@+id/detail_application"
        android:name="com.example.aplication.ui.applications.DetailApplication"
        android:label="@string/detail_application"
        tools:layout="@layout/detail_application" >
        <argument
            android:name="applicationId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.aplication.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>